--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hackfinity-website"]
 	path = hackfinity-website
-	url = git@github.com:Ayushdevx/hackfinity-website.git
+	url = https://github.com/Ayushdevx/hackfinity-website.git
